--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -53,7 +53,7 @@
     font-weight: bolder;
 }
 .page_headtext{
-    font-size: 1.5em;
+    font-size: 1.2em;
     color: #ffffff;
 
 }
@@ -63,6 +63,13 @@
     color: $twt-title;
 }
 .twtbreadcrumb{
+    a{
+        color:#999999;
+        &:hover{
+            text-decoration: none;
+            color: $twt-blue-title;
+        }
+    }
     li{
         display: inline-block;
         margin-right: 10px;
