--- a/sass/twtcnangangcss/_visitors.scss
+++ b/sass/twtcnangangcss/_visitors.scss
@@ -47,16 +47,31 @@
     }
 }
 .floor_btn{
-    font-size: 1.5em;
+    font-size: 1.2em;
+
+    ul{
+        margin-bottom: 0;
+    }
     li{
+        background-color: #f5f5f5;
+        width: 100px;
+        padding: 10px 20px;
         display: inline-block;
-        &:after{
-            content: " ｜";
-            margin: 0 20px;
-            color: #cccccc;
+        text-align: center;
+        border-radius: 10px 10px 0 0;
+        &:hover{
+            background-color:$twt-blue-title;
+            color: #ffffff;
+
+        }
+        a{
+            color:#999;
+            &:hover{
+                text-decoration: none;
+
+            }
         }
     }
-
 }
 .link_box{
     display: grid;
