--- a/css/main.css
+++ b/css/main.css
@@ -1729,21 +1729,16 @@ html {
 
 .step {
   display: grid;
-  grid-template-columns: 10fr 1fr 10fr 1fr 10fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 20px;
   margin-bottom: 20px;
 }
 
 .step_four {
   display: grid;
-  grid-template-columns: 10fr 1fr 10fr 1fr 10fr 1fr 10fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-column-gap: 20px;
   margin-bottom: 20px;
-}
-
-.step_bg img {
-  width: 40px;
-  margin-top: 50px;
 }
 
 .stepblue {
@@ -3156,6 +3151,15 @@ html {
   text-align: center;
 }
 
+.step_one {
+  width: 100px;
+  margin: 0 auto;
+}
+.step_one img {
+  width: 100%;
+  margin-top: -50px;
+}
+
 @media only screen and (max-width: 1239px) {
   .viproom {
     grid-template-columns: 1fr 1fr;
@@ -3182,15 +3186,7 @@ html {
 
   .step_four {
     grid-template-columns: 1fr;
-  }
-
-  .step_bg {
-    text-align: center;
-  }
-  .step_bg img {
-    width: 25px;
-    margin-top: 0;
-    transform: rotate(90deg);
+    grid-row-gap: 30px;
   }
 
   .public_box {
