--- a/sass/twtcnangangcss/_conference_room.scss
+++ b/sass/twtcnangangcss/_conference_room.scss
@@ -155,3 +155,11 @@
 .meet_text{
     text-align: center;
 }
+.step_one{
+    width: 100px;
+    margin: 0 auto;
+    img{
+        width: 100%;
+        margin-top: -50px;
+    }
+}
