--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -70,6 +70,12 @@ html {
 
 .listitem {
     display: inline-block;
+    a{
+        color:#000000;
+        &:hover{
+            text-decoration: none;
+        }
+    }
 
     li {
         text-align: center;
