--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -153,7 +153,7 @@ html {
 .video-container {
     position: relative;
     padding-bottom: 38%;
-    padding-top: 15px;
+    // padding-top: 15px;
     height: 0;
     overflow: hidden;
     z-index: -1;
