--- a/css/main.css
+++ b/css/main.css
@@ -2251,11 +2251,19 @@ html {
 
 .calen-card_head {
   position: relative;
+  height: 250px;
+  overflow: hidden;
 }
 
 .calen-pic {
-  height: 150px;
-  overflow: hidden;
+  position: relative;
+  width: 100%;
+  background-size: cover;
+  cursor: pointer;
+  transition: all 0.6s;
+}
+.calen-pic:hover {
+  transform: scale(1.3);
 }
 .calen-pic img {
   width: 100%;
