--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -14,10 +14,18 @@
 }
 .calen-card_head{
     position: relative;
+    height: 250px;
+    overflow: hidden;
 }
 .calen-pic{
-    height: 150px;
-    overflow: hidden;
+    position: relative;
+    width: 100%;
+    background-size: cover;
+    cursor: pointer;
+    transition: all 0.6s;
+    &:hover {
+        transform: scale(1.3);
+    }
     img{
         width: 100%;
     }
