--- a/sass/twtcnangangcss/_conference_room.scss
+++ b/sass/twtcnangangcss/_conference_room.scss
@@ -151,6 +151,11 @@
         margin-left: 5px;
         margin-top: -5px;
     }
+    a{
+        &:hover{
+            text-decoration: none;
+        }
+    }
 }
 .meet_text{
     text-align: center;
