--- a/sass/twtcnangangcss/_organizers.scss
+++ b/sass/twtcnangangcss/_organizers.scss
@@ -30,7 +30,10 @@
     background: linear-gradient(to bottom, #50acf3 0%,#5ebcc7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50acf3', endColorstr='#5ebcc7',GradientType=0 ); /* IE6-9 */
     width: 40%;
-    -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+    -webkit-clip-path:polygon(0 0, 100% 0, 90% 100%, 0 100%);
+    -moz-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+    -o-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+    -ms-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
     height: 350px;
     overflow: hidden;
