--- a/sass/twtcnangangcss/_touch_twtcnangang.scss
+++ b/sass/twtcnangangcss/_touch_twtcnangang.scss
@@ -146,10 +146,10 @@
         right:50%;
         margin-right: -250px;
     }
-    .twtpic{
-        width: 65px;
-        height: 65px;
-    }
+    // .twtpic{
+    //     width: 65px;
+    //     height: 65px;
+    // }
     .downmenu_box{
         width: 960px;
         margin: 40px auto;
@@ -157,14 +157,21 @@
 
 }
 @include respond-mobile {
+    .copy{
+        width: 100%;
+        float: left;
+    }
+    .appleft{
+        margin-left:20%;
+    }
     .do_wrip{
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
-    .twtpic{
-        width: 100px;
-        height: 100px;
-    }
+    // .twtpic{
+    //     width: 100px;
+    //     height: 100px;
+    // }
     .view_bg {
     height: 418px;
     background-position: 0 236px;
