--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -381,26 +381,35 @@ html {
     margin: 0 auto;
 }
 .row_cop{
+    overflow: hidden;
     padding: 40px 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap:20px;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr;
+    // grid-column-gap:20px;
 
 }
 .copy{
-
+    width: 33.3%;
+    float: left;
 }
 .twt_one{
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    grid-column-gap:20px;
+
+    // display: grid;
+    // grid-template-columns: 1fr 3fr;
+    // grid-column-gap:20px;
 }
 .twt_bx{
+    width: 78%;
+    float: left;
 
 }
+.twt_bx_src{
+    width: 20%;
+    float: left;
+}
 .twtpic{
-    width: 100px;
-    height: 100px;
+    width:50px;
+    height: 50px;
     border-radius: 50%;
     overflow: hidden;
     grid-column-gap:20px;
