--- a/css/main.css
+++ b/css/main.css
@@ -497,11 +497,10 @@ html {
 }
 
 .twtpic {
-  width: 50px;
-  height: 50px;
+  width: 80%;
+  height: 80%;
   border-radius: 50%;
   overflow: hidden;
-  grid-column-gap: 20px;
 }
 .twtpic img {
   width: 100%;
