--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -408,11 +408,10 @@ html {
     float: left;
 }
 .twtpic{
-    width:50px;
-    height: 50px;
+    width:80%;
+    height:80%;
     border-radius: 50%;
     overflow: hidden;
-    grid-column-gap:20px;
     img{
         width: 100%;
     }
