--- a/sass/twtcnangangcss/_touch_about.scss
+++ b/sass/twtcnangangcss/_touch_about.scss
@@ -15,7 +15,18 @@
         grid-template-columns: 1fr;
         grid-row-gap:30px;
     }
-
+    .green_bild{
+        width: 100%;
+        padding-bottom: 5%;
+    }
+    .content-area{
+        width: 100%;
+    }
+    .content-right{
+        width: 100%;
+        margin-left: 0;
+        margin-top: 40px;
+    }
 
 
 }
