--- a/sass/twtcnangangcss/_touch_calendar.scss
+++ b/sass/twtcnangangcss/_touch_calendar.scss
@@ -23,10 +23,16 @@
         grid-template-columns: 1fr;
         grid-row-gap:30px;
     }
+    .calen-card-box{
+        width: 46%;
+    }
 
 
 }
 @include respond-small-mobile{
+    .calen-card-box{
+        width: 100%;
+    }
     .event_more_title{
         font-size: 1.8em;
     }
