--- a/sass/twtcnangangcss/_visitors.scss
+++ b/sass/twtcnangangcss/_visitors.scss
@@ -23,12 +23,12 @@
     }
 }
 .editor{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-row-gap:5px;
+    overflow: hidden;
     margin-bottom: 30px;
 }
 .ed_box{
+    width: 20%;
+    float: left;
     img{
         margin-right: 10px;
         width: 35px;
