--- a/sass/twtcnangangcss/_news.scss
+++ b/sass/twtcnangangcss/_news.scss
@@ -1,12 +1,16 @@
 .news-list{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap:30px;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr;
+    // grid-column-gap:30px;
+    @include clearfix;
 }
 .card-box{
+    width: 30%;
+    float: left;
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 50px;
+    margin-right: 2%;
 
 }
 .card_vrte{
